--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/NBUT-Developers/config.util/issues"
   },
-  "homepage": "https://github.com/NBUT-Developers/config.util#readme"
+  "homepage": "https://github.com/NBUT-Developers/config.util#readme",
+  "dependencies": {
+    "config": "^1.20.1"
+  }
 }
